<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
>
    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_color_zhinan"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/title_xinshengzhinan"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/xinshengzhinan">
        <TextView
            android:id="@+id/tv_zhinan_1"
            android:layout_marginTop="100dp"
            android:text="@string/zhengli"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_2"
            android:text="@string/mudidi"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_3"
            android:text="@string/diyizhan"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_4"
            android:text="@string/yigebing"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_5"
            android:text="@string/wanhuatong"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_6"
            android:text="@string/xinpengyou"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_7"
            android:text="@string/youbuzhu"
            style="@style/zhinan_textstyle"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_zhinan_8"
            android:text="@string/jiyu"
            style="@style/zhinan_textstyle"/>

    </LinearLayout>
</LinearLayout>