<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@drawable/chuxingxinxi">
    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/chuxingzhianan"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_xianlu"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_centerVertical="true"
        android:text="@string/xianlu"/>

    <TextView
        android:id="@+id/tv_mylocation"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_above="@id/tv_xianlu"
        android:layout_marginBottom="10dp"
        android:text="@string/wodeweizhi"
        />


    <TextView
        android:id="@+id/tv_chaweizhi"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_below="@id/tv_xianlu"
        android:layout_marginTop="10dp"
        android:text="@string/weizhichaxun"
        />

    <TextView
        android:id="@+id/tv_mapfanhui"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_below="@id/tv_chaweizhi"
        android:layout_marginTop="10dp"
        android:text="@string/fanhui"
        />


</RelativeLayout>