<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/xiaoyuanshenghuo"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/title_xuexiaoshenghuo"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_fengjing"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_centerVertical="true"
        android:text="@string/fengjing"/>

    <TextView
        android:id="@+id/tv_pingmiantu"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_above="@id/tv_fengjing"
        android:layout_marginBottom="10dp"
        android:text="@string/pingmiantu"
        />


    <TextView
        android:id="@+id/tv_xinshengzhinan"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_below="@id/tv_fengjing"
        android:layout_marginTop="10dp"
        android:text="@string/xinshengzhinan"
        />

    <TextView
        android:id="@+id/tv_fanhui"
        style="@style/xiaoyuanshenghuo_text_style"
        android:layout_below="@id/tv_xinshengzhinan"
        android:layout_marginTop="10dp"
        android:text="@string/fanhui"
        />


</RelativeLayout>